--- a/IB_Client/nbproject/project.properties
+++ b/IB_Client/nbproject/project.properties
@@ -30,7 +30,7 @@ dist.jar=${dist.dir}/IB_Client.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
-file.reference.FontysPublisher.jar=C:\\Users\\David\\Documents\\Fontys\\FontysPublisher.jar
+file.reference.FontysPublisher.jar=..\\FontysPublisher.jar
 includes=**
 # Non-JavaFX jar file creation is deactivated in JavaFX 2.0+ projects
 jar.archive.disabled=true
