Centrale publisher update

--- a/IB_Server/nbproject/project.properties
+++ b/IB_Server/nbproject/project.properties
@@ -27,7 +27,7 @@ dist.dir=dist
 dist.jar=${dist.dir}/IB_Server.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 excludes=
-file.reference.FontysPublisher.jar=C:\\Users\\David\\Documents\\Fontys\\FontysPublisher.jar
+file.reference.FontysPublisher.jar=..\\FontysPublisher.jar
 includes=**
 jar.compress=false
 javac.classpath=\
