Centrale publisher update

--- a/IB_Server/nbproject/project.properties
+++ b/IB_Server/nbproject/project.properties
@@ -28,10 +28,12 @@ dist.jar=${dist.dir}/IB_Server.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 excludes=
 file.reference.FontysPublisher.jar=..\\FontysPublisher.jar
+file.reference.FontysPublisher.jar-1=FontysPublisher.jar
 includes=**
 jar.compress=false
 javac.classpath=\
-    ${file.reference.FontysPublisher.jar}
+    ${file.reference.FontysPublisher.jar}:\
+    ${file.reference.FontysPublisher.jar-1}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
