--- a/IB_Client/nbproject/private/private.properties
+++ b/IB_Client/nbproject/private/private.properties
@@ -1,3 +1,3 @@
 auxiliary.org-netbeans-modules-projectapi.issue214819_5f_fx_5f_enabled=true
-file.reference.FontysPublisher.jar=D:\\School\\S3\\InternetBankierenGSO\\IB_Client\\FontysPublisher.jar
+file.reference.FontysPublisher.jar=C:\\Users\\David\\Documents\\Fontys\\GSO3\\Internetbankieren (IB)\\IB_Client\\FontysPublisher.jar
 user.properties.file=C:\\Users\\Michiel van Eijkeren\\AppData\\Roaming\\NetBeans\\8.1\\build.properties
