--- a/IB_Server/nbproject/private/private.properties
+++ b/IB_Server/nbproject/private/private.properties
@@ -1,2 +1,6 @@
-file.reference.FontysPublisher.jar=D:\\School\\S3\\InternetBankierenGSO\\IB_Server\\FontysPublisher.jar
+compile.on.save=false
+do.depend=false
+do.jar=true
+javac.debug=true
+javadoc.preview=true
 user.properties.file=C:\\Users\\Michiel van Eijkeren\\AppData\\Roaming\\NetBeans\\8.1\\build.properties
