--- a/IB_Server/nbproject/project.properties
+++ b/IB_Server/nbproject/project.properties
@@ -1,9 +1,10 @@
 annotation.processing.enabled=true
 annotation.processing.enabled.in.editor=false
-annotation.processing.processor.options=
 annotation.processing.processors.list=
 annotation.processing.run.all.processors=true
 annotation.processing.source.output=${build.generated.sources.dir}/ap-source-output
+application.title=IB_Server
+application.vendor=David
 build.classes.dir=${build.dir}/classes
 build.classes.excludes=**/*.java,**/*.form
 # This directory is removed when the project is cleaned:
@@ -26,13 +27,14 @@ dist.archive.excludes=
 dist.dir=dist
 dist.jar=${dist.dir}/IB_Server.jar
 dist.javadoc.dir=${dist.dir}/javadoc
+endorsed.classpath=
 excludes=
-file.reference.FontysPublisher.jar=..\\FontysPublisher.jar
 file.reference.FontysPublisher.jar-1=FontysPublisher.jar
+file.reference.hamcrest-core-1.3.jar=hamcrest-core-1.3.jar
+file.reference.junit-4.12.jar=junit-4.12.jar
 includes=**
 jar.compress=false
 javac.classpath=\
-    ${file.reference.FontysPublisher.jar}:\
     ${file.reference.FontysPublisher.jar-1}
 # Space-separated list of extra javac options
 javac.compilerargs=
@@ -45,8 +47,8 @@ javac.target=1.8
 javac.test.classpath=\
     ${javac.classpath}:\
     ${build.classes.dir}:\
-    ${libs.junit_4.classpath}:\
-    ${libs.hamcrest.classpath}
+    ${file.reference.junit-4.12.jar}:\
+    ${file.reference.hamcrest-core-1.3.jar}
 javac.test.processorpath=\
     ${javac.test.classpath}
 javadoc.additionalparam=
