--- a/IB_DatabaseServer/nbproject/project.properties
+++ b/IB_DatabaseServer/nbproject/project.properties
@@ -29,12 +29,10 @@ dist.jar=${dist.dir}/IB_DatabaseServer.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
-file.reference.mysql-connector-java-5.1.33-bin.jar=../../Proftaak/Risk 3/mysql-connector-java-5.1.33-bin.jar
-file.reference.Shared.jar=../../Proftaak/Risk 3/Shared/dist/Shared.jar
+file.reference.mysql-connector-java-5.1.33-bin.jar=mysql-connector-java-5.1.33-bin.jar
 includes=**
 jar.compress=false
 javac.classpath=\
-    ${file.reference.Shared.jar}:\
     ${file.reference.mysql-connector-java-5.1.33-bin.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
