--- a/IB_Client/login.properties
+++ b/IB_Client/login.properties
@@ -1,3 +1,3 @@
-#Wed Dec 21 20:46:38 CET 2016
-lastLoggedResidence=DummyUser
-lastLoggedName=DummyUser
+#Wed Dec 21 22:02:45 CET 2016
+lastLoggedResidence=Roermond
+lastLoggedName=Frank
