--- a/IB_Client/login.properties
+++ b/IB_Client/login.properties
@@ -1,3 +1,3 @@
-#Wed Dec 21 22:02:45 CET 2016
-lastLoggedResidence=Roermond
-lastLoggedName=Frank
+#Wed Dec 21 23:05:24 CET 2016
+lastLoggedResidence=Eindhoven
+lastLoggedName=Henk
