--- a/IB_Client/login.properties
+++ b/IB_Client/login.properties
@@ -1,3 +1,3 @@
-#Tue Dec 27 18:20:26 CET 2016
-lastLoggedResidence=Eindhoven
-lastLoggedName=Henk
+#Wed Dec 28 21:21:01 CET 2016
+lastLoggedResidence=.
+lastLoggedName=.
