--- a/IB_Client/login.properties
+++ b/IB_Client/login.properties
@@ -1,3 +1,3 @@
-#Wed Dec 28 22:35:56 CET 2016
-lastLoggedResidence=Eindhoven
-lastLoggedName=Henk
+#Tue Jan 10 16:28:21 CET 2017
+lastLoggedResidence=asdf
+lastLoggedName=asdf
