Schermwissels en inloggen geimplementeerd

--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,26 @@
 IB_Centralebuild
+
 IB_Centraledist
+
 IB_Serverbuild
+
 IB_Clientbuild
+
 IB_Clientdist
+
 IB_Serverdist
+
 /IB_DatabaseServer/build/
+
 /IB_DatabaseServer/dist/
+
 /IB_Client/build/
+
 /IB_Client/dist/
+/IB_Client/nbproject/private/
+
+/IB_Server/nbproject/private/
+
+/IB_Centrale/nbproject/private/
+
+/IB_DatabaseServer/nbproject/private/
