--- a/IB_Client/login.properties
+++ b/IB_Client/login.properties
@@ -1,3 +1,3 @@
-#Tue Jan 10 16:28:21 CET 2017
-lastLoggedResidence=asdf
-lastLoggedName=asdf
+#Tue Jan 10 19:32:44 CET 2017
+lastLoggedResidence=Eindhoven
+lastLoggedName=David
