--- a/IB_Client/login.properties
+++ b/IB_Client/login.properties
@@ -1,3 +1,3 @@
-#Tue Jan 10 19:25:32 CET 2017
-lastLoggedResidence=asdf
-lastLoggedName=asdf
+#Tue Jan 10 19:49:10 CET 2017
+lastLoggedResidence=asd
+lastLoggedName=asd
