--- a/IB_Client/login.properties
+++ b/IB_Client/login.properties
@@ -1,3 +1,3 @@
-#Tue Jan 10 20:45:48 CET 2017
-lastLoggedResidence=Eindhoven
-lastLoggedName=Henk
+#Tue Jan 10 21:21:41 CET 2017
+lastLoggedResidence=asdf
+lastLoggedName=asdf
