--- a/IB_Client/login.properties
+++ b/IB_Client/login.properties
@@ -1,3 +1,3 @@
-#Tue Jan 10 21:21:41 CET 2017
-lastLoggedResidence=asdf
-lastLoggedName=asdf
+#Wed Jan 11 01:07:07 CET 2017
+lastLoggedResidence=Eindhoven
+lastLoggedName=Henk
