--- a/IB_Client/login.properties
+++ b/IB_Client/login.properties
@@ -1,3 +1,3 @@
-#Tue Jan 17 13:55:28 CET 2017
+#Tue Jan 17 14:40:07 CET 2017
 lastLoggedResidence=Eindhoven
-lastLoggedName=Henk
+lastLoggedName=David
